# CapyMOA

./: .dockerignore  .gitignore  .releaserc.json  AdaptiveRandomForest.py  Basic_Classification_Examples.ipynb  CHANGELOG.md  CITATION.cff  CNAME  Classification_Evaluator_Examples.ipynb  Creating_new_classifier.ipynb  DEMO.ipynb  Data_Reading.ipynb  Efficient_Evaluation.ipynb  Evaluation_and_Data_Reading.ipynb  Instance_accessing_X.ipynb  LICENSE  Learners_API_Examples.ipynb  MOALearners.py  MOALearners_API_Examples.ipynb  MOA_API_Examples.ipynb  MOA_Comparison.ipynb  MOA_Python_Example.ipynb  MOA_River_ARF_comparison.ipynb  MOA_River_Comparison.ipynb  MOA_River_Example.ipynb  MOA_Simple_Example.ipynb  MOA_Test_ClassificationEvaluator.ipynb  MOA_Test_Data_Reading.ipynb  Makefile  Preprocessing.ipynb  README.md  SSL_example.ipynb  Simple_NeuralNetwork.ipynb  Using_jpype_MOA_example.ipynb  Using_sklearn_pytorch.ipynb  batch.py  batch_test.py  benchmarking.py  classifiers.py  config.ini  (+18 more)
.github/workflows/: all_targets.yml  docker.yml  documentation.yml  pr.md  pr.yml  python-package-test.yml  release.yml  unit_test.yml
benchmark/: README.md  benchmark_capymoa.py  benchmark_river.py  requirements.txt  run_benchmarks.py
classifier/: _online_bagging.py
data/: accessing_sample_data.txt  electricity.arff  electricity.csv  electricity_tiny.arff  electricity_tiny.csv  electricity_tiny.json  fried.arff  fried.csv
docker/: .env  docker-compose.yml  dockerfile
docs/: Makefile  README.md  about.rst  api.rst  conf.py  contributing.rst  docker.md  index.html  index.rst  installation.md  installation.rst  testing.md  tutorials.rst
docs/_static/css/: citation.css
docs/_static/favicon/: site.webmanifest
docs/_templates/: layout.html
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: api.rst  classifiers.rst  datasets.rst  env.rst  evaluation.rst  index.rst  instance.rst  learner.rst  learners.rst  moa_learner.rst  regressor.rst  splitcriteria.rst  ssl.rst  stream.rst
docs/api/abl/: base.rst  moa.rst  sklearn.rst
docs/contributing/: code_review.md  docs.md  docs.rst  faq.md  git.md  index.rst  learners.md  tests.md  update_moa.md  updating_moajar.md  vcs.md
docs/setup/: developer.rst  docker.md  index.rst
docs/source/: capymoa.datasets.rst  capymoa.evaluation.rst  capymoa.learner.classifier.rst  capymoa.learner.regressor.rst  capymoa.learner.rst  capymoa.rst  capymoa.stream.rst  modules.rst
docs/util/: github_link.py
experiments/: experiments_20230913.csv
notebooks/: 00_getting_started.ipynb  01_evaluation.ipynb  01_evaluation_and_data_reading.ipynb  02_learners_api_examples.ipynb  02_sklearn.ipynb  03_0_using_sklearn.ipynb  03_1_using_pytorch.ipynb  03_2_preprocess_using_MOA.ipynb  03_pytorch.ipynb  03_using_sklearn_pytorch.ipynb  04_drift_streams.ipynb  05_new_learner.ipynb  06_advanced_API.ipynb  07_pipelines.ipynb  08_prediction_interval.ipynb  09_automl.ipynb  10_kafka_streams.ipynb  10_ocl.ipynb  Basic_Classification_Examples.ipynb  Classification_Evaluator_Examples.ipynb  Creating_new_classifier.ipynb  DEMO.ipynb  Data_Reading.ipynb  DriftStream_API.ipynb  Efficient_Evaluation.ipynb  Evaluation_and_Data_Reading.ipynb  MOALearners_API_Examples.ipynb  MOA_Python_Example.ipynb  MOA_River_ARF_comparison.ipynb  Pipelines.ipynb  Preprocessing.ipynb  SSL_example.ipynb  Simple_NeuralNetwork.ipynb  Using_jpype_MOA_example.ipynb  Using_sklearn_pytorch.ipynb  XX_drift_classifier.ipynb  anomaly_detection.ipynb  benchmarking.py  clustering.ipynb  clustering_testing_results.ipynb  (+9 more)
notebooks/util/: nbmock.py
scripts/: download_datasets_and_moa.py  download_moa.py  stubgen.py
src/capymoa/: __about__.py  __init__.py  _env.py  _pickle.py  _prepare_jpype.py  _utils.py  base.py  config.ini  env.py  exception.py  instance.py  misc.py  prepare_jpype.py  splitcriteria.py  type_alias.py  utils.py
src/capymoa/ann/: __init__.py  _lenet.py  _perceptron.py  _resnet.py  util.py
src/capymoa/anomaly/: __init__.py  _adaptive_isolation_forest.py  _autoencoder.py  _half_space_trees.py  _online_isolation_forest.py  _robust_random_cut_forest.py  _stream_rhf.py  _streaming_isolation_forest.py  autoencoder.py  half_space_trees.py
src/capymoa/automl/: __init__.py  _autoclass.py  _bandit_classifier.py  _successive_halving_classifier.py  _utils.py
src/capymoa/base/: __init__.py  _base.py  _batch.py  _classifier.py  _regressor.py  _ssl.py
src/capymoa/benchmark/: benchmark_river.py  run_benchmarks.py
src/capymoa/classifier/: __init__.py  _adaptive_random_forest.py  _csmote.py  _dynamic_weighted_majority.py  _efdt.py  _finetune.py  _hoeffding_adaptive_tree.py  _hoeffding_tree.py  _knn.py  _last.py  _leveraging_bagging.py  _majority_class.py  _naive_bayes.py  _no_change.py  _online_accuracy_updated_ensemble.py  _online_adwin_bagging.py  _online_bagging.py  _online_bagging_adwin.py  _online_smooth_boost.py  _oza_boost.py  _passive_aggressive_classifier.py  _plastic.py  _rw_knn.py  _samknn.py  _sgbt.py  _sgd_classifier.py  _shrubensembles.py  _shrubs_classifier.py  _shrubs_ensemble.py  _srp.py  _streaming_random_patches.py  _weightedknn.py  classifiers.py  naive_bayes.py  sklearn.py
src/capymoa/cluster/: __init__.py  _bico.py  _clustream.py  _clustream_with_kmeans.py  _clustree.py  _cobweb.py  _confstream.py  _denstream_with_dbscan.py  _dstream.py  _streamkm.py  base.py  (+3 more)
test_utility/: ssl_helpers.py
tests/: conftest.py  test_CPSSDS.py  test_EFDT.py  test_HT.py  test_OSNN.py  test_anomaly_detectors.py  test_bandit_classifier.py  test_basic.py  test_batch.py  test_classifiers.py  test_datasets.py  test_evaluation.py  test_import.py  test_misc.py  test_moajar.py  test_model_import_and_export.py  test_ocl.py  test_pi.py  test_progress_bar.py  test_regressors.py  test_ssl_classifiers.py  test_stream.py  test_successive_halving.py
tests/datasets/: test_ocl.py
tests/ocl/: test_datasets.py  test_l2p.py  test_learners.py  test_ocl.py  test_ocl_eval.py  test_strategy.py
tools/template/: MOAClassifier.py.jinja  README.md  main.py
tutorials/2024_IJCAI/: IJCAI_2024.ipynb
(+137 files in other folders)
