[build-system]
# wget is used to download the MOA jar file
# stubgenj is used to generate the Python stub files for the MOA classes
requires = ["hatchling", "hatch-build-scripts", "wget", "stubgenj", "invoke"]
# Build system: https://hatch.pypa.io
# The main reason I chose hatch is its support for plugins allowing us to
# download the MOA jar file before the build starts.
build-backend = "hatchling.build"

[project]
name = "capymoa"
version = "0.0.1"
description = "Python wrapper for MOA to allow efficient use of existing algorithms with a more modern API."
requires-python = ">=3.9"
# Defines the pip packages that are required by this package. These should be
# as permissive as possible, since capymoa should collaborate with other
# packages.
dependencies = [
    "jpype1",
    "wget",
    "numpy",
    "pandas",
    "pyarrow",
    "river",
    "matplotlib",
    "scikit-learn"
]

[project.optional-dependencies]
# Development dependencies
dev=[
    "pytest",
    "jupyter",
    "nbmake",
    "pytest-xdist",
    "invoke",
    "wget"
]

doc=[
    # Documentation generator
    "sphinx",
    # Theme for the documentation
    "pydata-sphinx-theme",
    # Allows to include Jupyter notebooks in the documentation
    "sphinx-autobuild",
    # Allows to include Jupyter notebooks in the documentation
    "nbsphinx",
    # Parses markdown files
    "myst-parser"
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
norecursedirs = [
    "docs/*"
]

[tool.hatch]
[tool.hatch.build.targets.wheel]
# Defines the directories included in the wheel package
packages = ["src/capymoa", "src/moa-stubs", "src/com-stubs"]
artifacts = ["src/capymoa/jar/moa.jar"]

# src/moa-stubs and src/com-stubs are included in the git ignore file
# that hatch inherits. To include them anyway we need to set ignore-vcs to true.
ignore-vcs = true

[tool.hatch.build.targets.sdist]
# Defines the directories included in the source distribution package (sdist).
packages = ["src/capymoa", "src/moa-stubs", "src/com-stubs"]
artifacts = ["src/capymoa/jar/moa.jar"]

# src/moa-stubs and src/com-stubs are included in the git ignore file
# that hatch inherits. To include them anyway we need to set ignore-vcs to true.
ignore-vcs = true

[[tool.hatch.build.hooks.build-scripts.scripts]]
# Ensures that the MOA jar file is downloaded before the build starts.
commands = [
    "python -m invoke build.download-moa",
    "python -m invoke build.stubs"
]
artifacts = []
